@@ -89,7 +89,8 @@ android {
       all {
         it.jvmArgs(
           "--add-opens=java.base/java.lang=ALL-UNNAMED",
-          "--add-opens=java.base/java.util=ALL-UNNAMED"
+          "--add-opens=java.base/java.util=ALL-UNNAMED",
+          "-Dnet.bytebuddy.experimental=true"
         )
       }
     }
